@@ -652,7 +652,6 @@ lpd_queue(const char *hostname,		/* I - Host to connect to */
 			have_supplies;	/* Printer supports supply levels? */
   int			copy;		/* Copies written */
   time_t		start_time;	/* Time of first connect */
-  int			recoverable;	/* Recoverable error shown? */
   size_t		nbytes;		/* Number of bytes written */
   off_t			tbytes;		/* Total bytes written */
   char			buffer[32768];	/* Output buffer */
@@ -697,8 +696,7 @@ lpd_queue(const char *hostname,		/* I - Host to connect to */
   * Remember when we started trying to connect to the printer...
   */
 
-  recoverable = 0;
-  start_time  = time(NULL);
+  start_time = time(NULL);
 
  /*
   * Loop forever trying to print the file...
@@ -835,11 +833,9 @@ lpd_queue(const char *hostname,		/* I - Host to connect to */
 	  return (CUPS_BACKEND_FAILED);
 	}
 
-        recoverable = 1;
-
 	_cupsLangPrintf(stderr,
-			_("WARNING: recoverable: Network host \'%s\' is busy; "
-			  "will retry in %d seconds...\n"), hostname, delay);
+			_("WARNING: Network host \'%s\' is busy; will retry in "
+			  "%d seconds...\n"), hostname, delay);
 
 	sleep(delay);
 
@@ -856,26 +852,12 @@ lpd_queue(const char *hostname,		/* I - Host to connect to */
       }
       else
       {
-        recoverable = 1;
-
         fprintf(stderr, "DEBUG: Connection error: %s\n", strerror(errno));
 	_cupsLangPuts(stderr,
-	              _("ERROR: recoverable: Unable to connect to printer; "
-		        "will retry in 30 seconds...\n"));
+	              _("ERROR: Unable to connect to printer; will retry in 30 "
+		        "seconds...\n"));
 	sleep(30);
       }
-    }
-
-    if (recoverable)
-    {
-     /*
-      * If we've shown a recoverable error make sure the printer proxies
-      * have a chance to see the recovered message. Not pretty but
-      * necessary for now...
-      */
-
-      fputs("INFO: recovered: \n", stderr);
-      sleep(5);
     }
 
     fputs("STATE: -connecting-to-device\n", stderr);
